[package]
name = "aoc19"
version = "0.1.0"
authors = ["foresterre <garm@ilumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"

# pre loading libraries beause terrible internet at the moment
anyhow = "1.0"
#arrayvec = "0.5.1"
#bitflags = "1.2.1"
#chrono = "0.4.10"
#daggy = "0.6.0"
#dtoa = "0.4.4"
#floyd-warshall = "0.0.3"
#fnv = "1.0.6"
#itertools = "0.8.2"
#itoa = "0.4.4"
#lazy_static = "1.4.0"
#ndarray = "0.13.0"
#petgraph = "0.4.13"
#priority-queue = "0.6.0"
#progress-streams = "1.1.0"
#ptree = "0.2.1"
#num = "0.2.0"
#rayon = "1.2.1"
#regex = "1.3.1"
#roaring = "0.6.0"

# quick testing
parameterized = "0.1.0"