[package]
name = "aoc19"
version = "0.1.0"
authors = ["foresterre <garm@ilumeo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"

anyhow = "1.0"
itoa = "0.4.4"
rayon = "1.2.1"

# quick testing
parameterized = "0.1.0"